tests/org.eclipse.php.core.tests/src/org/eclipse/php/core/tests/errors/PHP53ErrorReportingTests#tearDownSuite().mjava
	public static void tearDownSuite() throws Exception {
		project.close(null);
		project.delete(true, true, null);
		project = null;
	}

